# ozi

./: Cargo.toml  node_config.toml  readme.md
node/: Cargo.toml
node/src/: config.rs  main.rs
ozi/: Cargo.toml
ozi/src/: lib.rs  network.rs  price.rs  service.rs  utils.rs
ozi/src/exchanges/: cryptocompare.rs  exchange.rs  mod.rs  numerofx.rs  types.rs  utils.rs
ozi/src/network/: behavior.rs  mod.rs  swarm.rs
ozi/src/price/: cryptocompare.rs  exchange.rs  numerofx.rs  types.rs
relayer/: Cargo.toml
relayer/src/: lib.rs  main.rs
src/: behavior.rs  gossipsub.rs  main.rs  swarm.rs
