[package]
name = "ozi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = "0.2.3"
futures = "0.3.28"
libp2p = { version = "0.52.3", features = [
    "tcp",
    "dns",
    "noise",
    "yamux",
    "websocket",
    "ping",
    "macros",
    "tokio",
    "kad",
    "identify",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
structopt = "0.3.26"
colored = "2.0.4"
libp2p-gossipsub = "0.45.1"
quick-error = "2.0.1"
eyre = "0.6.8"
