[package]
name = "ozi"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Descent-Collective/ozi.git"
authors = ["Kourtney Chima <kourtccode@gmail.com>"]

[dependencies]
futures = "0.3.28"
libp2p = { version = "0.52.3", features = [
    "tcp",
    "dns",
    "noise",
    "yamux",
    "websocket",
    "ping",
    "macros",
    "tokio",
    "kad",
    "identify",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
libp2p-gossipsub = "0.45.1"
eyre = "0.6.8"
reqwest = { version = "0.11.22", features = ["json"] }
strum = { version = "0.25", features = ["derive"] }
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["rustls"] }
async-trait = "0.1.74"
hex = "0.4.3"
tarpc = { version = "0.33", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
